# codex_testytest

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
4d_chess/: __init__.py  board.py  cli.py  game.py  pieces.py  player.py
tests/: test_board.py  test_game.py  test_pieces.py
