[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "four-d-chess"
version = "0.1.0"
authors = [
    { name = "OpenAI Codex" },
]
description = "A playable four-dimensional chess game with Cat and Alien pieces"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/yourname/four-d-chess"
